--- a/pages/list/aprovado-reprovado/aprovado-reprovado.css
+++ b/pages/list/aprovado-reprovado/aprovado-reprovado.css
@@ -5,7 +5,7 @@ section {
 .fields {
     display: flex;
     flex-direction: column;
-    max-width: 500px;
+    max-width: 400px;
     margin: auto;
 }
 
@@ -13,7 +13,7 @@ section {
     background-color: rgb(88, 88, 88) ;
     border: none;
     color: var(--color-secondary);
-    padding: 16px 0;
+    padding: 16px 10px;
     font-size: 16px;
     text-decoration: none;
     margin: 16px 0 32px 0;
