--- a/styles/fields.css
+++ b/styles/fields.css
@@ -18,7 +18,7 @@ section {
     background-color: rgb(88, 88, 88) ;
     border: none;
     color: var(--color-secondary);
-    padding: 16px 0;
+    padding: 16px 16px;
     font-size: 16px;
     text-decoration: none;
     margin: 16px 0 32px 0;
